--- a/build.gradle
+++ b/build.gradle
@@ -610,8 +610,8 @@ subprojects {
   jacocoTestReport {
     reports {
       xml.required = true
-      csv.required = false
-      html.required = false
+      csv.required = true
+      html.required = true
     }
   }
 
